Report if the search runs too long (currently set to 3 hours). BugsId: 785

--- a/swift/web/src/main/webapp/report/report.css
+++ b/swift/web/src/main/webapp/report/report.css
@@ -244,6 +244,10 @@ table.reportList td {
     background-repeat: no-repeat;
 }
 
+.ran-too-long {
+    color: #ff0000;
+}
+
 .dropdown {
     z-index: 199;
     display: none;
